fixed details content overflow

--- a/css/forms/details.scss
+++ b/css/forms/details.scss
@@ -5,7 +5,7 @@ details.cms-accordion {
 	padding  : 1rem 1rem 0;
 	display  : grid;
 	gap      : 1rem;
-	overflow : hidden;
+	// overflow : hidden;
 
 	summary {
 		border-radius    : var(--totalform-radius);
